# road-irregularity-ml

./: .gitignore  README.md  pyproject.toml
.agents/skills/: SKILL.md
.agents/skills/git-commit/: SKILL.md
.agents/skills/github-open-pr/: SKILL.md
.agents/skills/github-open-pr/agents/: openai.yaml
.agents/skills/github-pr/: SKILL.md
.agents/skills/github-pr/agents/: openai.yaml
.agents/skills/github-pr/assets/: pr-body-template.md
adr/: 20260513_detail.md
configs/: mock_data_acc_only.yaml  mock_data_with_gyro.yaml  random_forest.yaml  svm.yaml  wheelchair_world_z_622_extended.yaml  wheelchair_world_z_712_extended.yaml  wheelchair_world_z_combined_random_forest.yaml  wheelchair_world_z_combined_svm.yaml  wheelchair_world_z_random_forest.yaml  wheelchair_world_z_svm.yaml  wheelchair_world_z_svm_712.yaml
docs/: 20260513_roadmap.md
docs/5.13/: mock_data_script.md  phase1_baseline_pipeline_summary.md
docs/5.19/: phase1_baseline_pipeline_summary.md
knowledge/6.30/: 20260630_wheelchair_world_z_experiment_summary.md  plan.md
knowledge/7.12/: 20260712_accuracy_improvement_proposals.md  20260712_combined_training_summary.md  20260712_wheelchair_712_vs_622_comparison.md
knowledge/7.13/: 20260713_semi_report_summary.md
src/: __init__.py  config.py  models.py  train_dummy.py  wheelchair_pipeline.py
src/scripts/: __init__.py  build_wheelchair_dataset.py  extract_features.py  generate_mock_data.py  plot_wheelchair_data.py  plot_world_vertical_data.py  plot_world_z_only.py  train_dummy.py  train_wheelchair_model.py
tests/: test_generate_mock_data.py  test_wheelchair_pipeline.py
