[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "road-irregularity-ml"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]

[project.scripts]
train-dummy = "src.scripts.train_dummy:main"
generate-mock-data = "src.scripts.generate_mock_data:main"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
